--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -1,5 +1,5 @@
 <footer></footer>
     <small>
-        This website was possible due to the amazing work done by <a href="https://github.com/gcushen">https://github.com/gcushen</a> and the Hugo blox project, thank you :)
+        This website was made possible due to the amazing work done by <a href="https://github.com/gcushen">gcushen</a> and the Hugo blox project, thank you :)
     </small>
 </footer>
